--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     <link rel="stylesheet" href="style/g3.css">
 </head>
 <body>
-    <header>
-
+    <header class="bg-color">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>  
-
+        
     </main>
     <footer>
 
