--- a/index.html
+++ b/index.html
@@ -27,7 +27,52 @@
         </div>
     </header>
     <main>  
-        
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list">Quick list</span><span id="of-our"> of Our</span><span id="feature"> Features</span></h3>
+                <p class="feature-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- featuee will enjoy -->
+        <section>
+
+        </section>
+        <!-- facts -->
+         <section class="facts">
+            <h3 class="facts-title">Some Facts</h3>
+            <p class="facts-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <!-- .fact*4>img.fact-icon+h4.num+h5.fact-name -->
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="num"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="num"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="num"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="num"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+
+            </div>
+         </section>
     </main>
     <footer>
 
