added last section

--- a/index.html
+++ b/index.html
@@ -50,27 +50,49 @@
             <p class="facts-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-container">
                 <!-- .fact*4>img.fact-icon+h4.num+h5.fact-name -->
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="num"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="num">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="num"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="num">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="num"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="num">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="num"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                   <div>
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="num">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                   </div>
                 </div>
 
+            </div>
+         </section>
+
+         <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="facts-title">Our Sponspors</h3>
+                <p class="same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="" class="company-img">
+                <img src="images/sponsors/amazon.png" alt="" class="company-img">
+                <img src="images/sponsors/google.png" alt="" class="company-img">
+                <img src="images/sponsors/telerama.png" alt="" class="company-img">
+                <img src="images/sponsors/figma.png" alt="" class="company-img">
             </div>
          </section>
     </main>
