--- a/index.html
+++ b/index.html
@@ -41,8 +41,36 @@
             </div>
         </section>
         <!-- featuee will enjoy -->
-        <section>
+        <section class="features display-flex">
+            <div>
+                <h3 id="side-border" class="facts-title">Features you will <br>love & enjoy</h3>
+                <p class="same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+
+                <div class="feature-card">
+                    <h4 class="enjoy-title">Dexktop & Mobile Version</h4>
+                    <p class="enjoy-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="enjoy-title">Drag & Drop Builder</h4>
+                    <p class="enjoy-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="enjoy-title">Awesome Modern Design</h4>
+                    <p class="enjoy-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="enjoy-title">Super Easy to Edit</h4>
+                    <p class="enjoy-description same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-architect">
+                <img class="a-lady" src="images/architect.png" alt="">
+                <button id="exp-badge" class="btn-primary">
+                    <span id="exp-year">10+Years</span><br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
         <!-- facts -->
          <section class="facts">
