--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                 <p class="same-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
             <div class="sponsor-companies">
-                <img src="images/sponsors/spotify.png" alt="" class="company-img">
-                <img src="images/sponsors/amazon.png" alt="" class="company-img">
-                <img src="images/sponsors/google.png" alt="" class="company-img">
-                <img src="images/sponsors/telerama.png" alt="" class="company-img">
-                <img src="images/sponsors/figma.png" alt="" class="company-img">
+                <img src="images/sponsors/spotify.png" alt="" class="company-img spotify">
+                <img src="images/sponsors/amazon.png" alt="" class="company-img amazon">
+                <img src="images/sponsors/google.png" alt="" class="company-img google">
+                <img src="images/sponsors/telerama.png" alt="" class="company-img telerama">
+                <img src="images/sponsors/figma.png" alt="" class="company-img figma">
             </div>
          </section>
     </main>
